<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent" 
   android:layout_height="fill_parent" >	
	
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="bottom"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >
	
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="30dp"
	        android:text="@string/rateCalcTitle"
	        android:textSize="40sp" />
	
	    <EditText
	        android:id="@+id/edtTxtDays"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/textView1"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="30dp"
	        android:ems="10"
	        android:hint="@string/edtTxtDaysHint"
	        android:inputType="number"
	        android:text="@string/edtTxtDaysText"
	        android:textSize="30sp" >
	
	        <requestFocus />
	    </EditText>
	
	    <RadioGroup
	        android:id="@+id/radioGroup1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/edtTxtDays"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="61dp" >
	
	        <RadioButton
	            android:id="@+id/radConvertible"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:checked="true"
	            android:text="@string/radBtnConvertible"
	            android:textSize="40sp" />
	
	        <RadioButton
	            android:id="@+id/radHybrid"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:checked="false"
	            android:text="@string/radBtnHybrid"
	            android:textSize="40sp" />
	        
	        <RadioButton
	            android:id="@+id/radLuxury"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:checked="false"
	            android:text="@string/radBtnLuxury"
	            android:textSize="40sp" />
	                        
	        <RadioButton
	            android:id="@+id/radSedan"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:checked="false"
	            android:text="@string/radBtnSedan"
	            android:textSize="40sp" />
	                                
	        <RadioButton
	            android:id="@+id/radSUV"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:checked="false"
	            android:text="@string/radBtnSUV"
	            android:textSize="40sp" />
	                                        
	        <RadioButton
	            android:id="@+id/radTruck"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:checked="false"
	            android:text="@string/radBtnTruck"
	            android:textSize="40sp" />
	                                                
	        <RadioButton
	            android:id="@+id/radVan"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:checked="false"
	            android:text="@string/radBtnConvertible"
	            android:textSize="40sp" />
	                 
	        <RadioButton
	            android:id="@+id/radWagon"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:checked="false"
	            android:text="@string/radBtnWagon"
	            android:textSize="40sp" />       
	    </RadioGroup>
	
	    <Button
	        android:id="@+id/btnConvert"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/radioGroup1"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="69dp"
	        android:text="@string/btnRateCalc"
	        android:textSize="40sp" />
	
	    <TextView
	        android:id="@+id/txtConversion"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_below="@id/btnConvert"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="40dp"
	        android:textColor="#FF0000"
	        android:textSize="50sp" />
	
	</RelativeLayout>
</ScrollView>